[package]
name = "containeryard"
description = "Cli tool for creating containers"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mcmah309/containeryard"

[[bin]]
name = "yard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
const_format = "0.2.32"
clap = {version = "4.5", features=["derive"]}
serde = {version = "1", features=["derive"]}
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.18"
dirs = "5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
regex = "1"
enum_dispatch = "0.3"
#bumpalo = "3"