[package]
name = "containeryard"
description = "Container Yard is a declarative, reproducible, and reusable decentralized approach for defining containers. Think Nix flakes meets Containerfiles (aka Dockerfiles)."
authors = ["Henry McMahon"]
license = "Apache-2.0"
version = "0.2.7"
edition = "2021"
repository = "https://github.com/mcmah309/containeryard"
rust-version = "1.80"

[[bin]]
name = "yard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
const_format = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.26"
dirs = "5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
duct_sh = "0.13"
futures = "0.3"
regex = "1"
tera = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.dist]
inherits = "release"
lto = true
strip = true
codegen-units = 1

[package.metadata.deb]
maintainer = "Dillon Henry McMahon <dillonmcmahon79@gmail.com>"
copyright = "2024, Dillon Henry McMahon <dillonmcmahon79@gmail.com>"
extended-description = """Container Yard is a declarative, reproducible, and reusable decentralized approach for defining containers."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
 ["target/release/yard", "usr/bin/", "755"],
]